[tool.poetry]
name = "cntrabot"
version = "0.1.0"
description = ""
authors = ["Artem Ivanov <ivart@ivart.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.11"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
